...
        "ru": "Редактировать профиль",
        "kk": "Профильді өңдеу",
        "zh-Hans": "编辑资料",
        "yue": "編輯個人資料"
    ],
    "sign_out": [
        "en": "Sign Out",
        "ru": "Выйти",
        "kk": "Шығу",
        "zh-Hans": "退出登录",
        "yue": "登出"
    ],
    "notifications": [
...
        "ru": "Чаты",
        "kk": "Чаттар",
        "zh-Hans": "聊天",
        "yue": "聊天"
    ],
    "profile": [
        "en": "Profile",
        "ru": "Профиль",
        "kk": "Профиль",
        "zh-Hans": "个人资料",
        "yue": "個人資料"
    ],
    "add": [
...
        "ru": "ОК",
        "kk": "Жарайды",
        "zh-Hans": "确定",
        "yue": "確定"
    ],
    "yes": [
        "en": "Yes",
        "ru": "Да",
        "kk": "Иә",
        "zh-Hans": "是",
        "yue": "是"
    ],
    "no": [
...
        "ru": "Назад",
        "kk": "Артқа",
        "zh-Hans": "返回",
        "yue": "返回"
    ],
    "next": [
        "en": "Next",
        "ru": "Далее",
        "kk": "Келесі",
        "zh-Hans": "下一步",
        "yue": "下一步"
    ],
    "previous": [
...
